first html code

--- a/Index.html
+++ b/Index.html
@@ -43,7 +43,6 @@
         <h2>Contact Me</h2>
 
         <p>Fill the form below to contact</p>
-
         <form>
           <label for="name">Name</label>
           <input type="text" /> <br /><br />
@@ -53,7 +52,6 @@
           <input type="password" /><br /><br />
           <label for="message">Message</label>
           <textarea name="" id=""></textarea><br /><br />
-
           <label for="">Sex</label>
           <input type="radio" name="Sex" />Male <br />
           <input type="radio" name="Sex" />Female <br />
@@ -74,7 +72,6 @@
             <option value="Cairo">Cairo</option>
           </select>
           <br /><br />
-
           <button type="submit">Submit</button>
         </form>
       <section>
@@ -84,15 +81,15 @@
         <img src="Profile.jpeg" alt="profile image">
        </div>
     </section>
+  <section>  
  <section>
-    Git hub terminal command for setting up your git locally
+   Git hub terminal command for setting your git locally
 
-    git config --global user.name "yourname"
-    git config --global user.email "you@example.com"
+   
  </section>
-  </main>
-  <footer>© Copyright 2024 My Website</footer>
+ 
+ <main>
+ <footer>© Copyright 2024 My Website</footer>
 
- </body>
-</html>
-
+ <body>
+<html>
